[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nokamute-py"
version = "0.1.0"
description = "Python bindings for Nokamute Hive AI with self-play learning"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "numpy>=1.20.0",
]

[tool.maturin]
module-name = "nokamute"
features = ["python"]
manifest-path = "../Cargo.toml"
